--- a/index.html
+++ b/index.html
@@ -7,8 +7,32 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./main.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <h1>Rock, Paper, Scissors!</h1>
+        <p>What is your weapon?</p>
+    </header>
+    <main>
+        <div id="rock" class="game-choice">
+            <div></div>
+        </div>
+        <div id="paper" class="game-choice">
+            <div></div>
+        </div>
+        <div id="scissors" class="game-choice">
+            <div></div>
+        </div>    
+    </main>
+    <footer>
+        <p>Round 1!</p>
+        <div id="results">
+            <p>Player:</p>
+            <p>Computer:</p>
+        </div>
+    </footer>
+
     <script src="./main.js"></script>
 </body>
 </html>
